# docs/swagger.yaml
@@ -93,6 +93,15 @@ definitions:
           Status   int    `json:"status,omitempty"`   // http status
         type: string
     type: object
+  respdto.LoginResp:
+    properties:
+      exp:
+        example: 1719218836
+        type: integer
+      token:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2NvdW50IjoiamVmZjc3NzciLCJlbWFpbCI6ImplZmZAZ21haWwuY29tIiwiZXhwIjoxNzE5MjE4ODM2LCJpZCI6ImZhNzkxODE2LWRkMzUtNDJlNi1hNDc1LTAwZjg3ZDRhYzlhYSIsInBob25lIjoiKzg4Njk1NTU1NTU1NSIsInVzZXJOYW1lIjoiSmVmZiJ9.ALccbWnDW4Tg6NvIS8aCw3B96okQ3gLVqiEz3Ukq_eA
+        type: string
+    type: object
 info:
   contact: {}
   description: User Service API
@@ -127,9 +136,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok" "返回用户信息
+          description: 返回token訊息
           schema:
-            type: string
+            $ref: '#/definitions/respdto.LoginResp'
         default:
           description: error response
           schema:
